<resources>
    <string name="app_name">Colorfull</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="wheely">PALETTE</string>
    <string name="titre_palette">PALETTE</string>
    <string name="color_name">nom de la couleur</string>
    <string name="chercher">Rechercher le plus proche</string>
    <string name="LabelVert">Vert</string>
    <string name="LabelBleu">Bleu</string>
    <string name="LabelRouge">Rouge</string>
    <string-array name="color_names">
        <item>AliceBlue</item>
        <item>AntiqueWhite</item>
        <item>Aqua</item>
        <item>Aquamarine</item>
        <item>Azure</item>
        <item>Beige</item>
        <item>Bisque</item>
        <item>Black</item>
        <item>BlanchedAlmond</item>
        <item>Blue</item>
        <item>BlueViolet</item>
        <item>Brown</item>
        <item>BurlyWood</item>
        <item>CadetBlue</item>
        <item>Chartreuse</item>
        <item>Chocolate</item>
        <item>Coral</item>
        <item>CornflowerBlue</item>
        <item>Cornsilk</item>
        <item>Crimson</item>
        <item>Cyan</item>
        <item>DarkBlue</item>
        <item>DarkCyan</item>
        <item>DarkGoldenRod</item>
        <item>DarkGray</item>
        <item>DarkGrey</item>
        <item>DarkGreen</item>
        <item>DarkKhaki</item>
        <item>DarkMagenta</item>
        <item>DarkOliveGreen</item>
        <item>Darkorange</item>
        <item>DarkOrchid</item>
        <item>DarkRed</item>
        <item>DarkSalmon</item>
        <item>DarkSeaGreen</item>
        <item>DarkSlateBlue</item>
        <item>DarkSlateGray</item>
        <item>DarkSlateGrey</item>
        <item>DarkTurquoise</item>
        <item>DarkViolet</item>
        <item>DeepPink</item>
        <item>DeepSkyBlue</item>
        <item>DimGray</item>
        <item>DimGrey</item>
        <item>DodgerBlue</item>
        <item>FireBrick</item>
        <item>FloralWhite</item>
        <item>ForestGreen</item>
        <item>Fuchsia</item>
        <item>Gainsboro</item>
        <item>GhostWhite</item>
        <item>Gold</item>
        <item>GoldenRod</item>
        <item>Gray</item>
        <item>Grey</item>
        <item>Green</item>
        <item>GreenYellow</item>
        <item>HoneyDew</item>
        <item>HotPink</item>
        <item>IndianRed </item>
        <item>Indigo </item>
        <item>Ivory</item>
        <item>Khaki</item>
        <item>Lavender</item>
        <item>LavenderBlush</item>
        <item>LawnGreen</item>
        <item>LemonChiffon</item>
        <item>LightBlue</item>
        <item>LightCoral</item>
        <item>LightCyan</item>
        <item>LightGoldenRodYellow</item>
        <item>LightGray</item>
        <item>LightGrey</item>
        <item>LightGreen</item>
        <item>LightPink</item>
        <item>LightSalmon</item>
        <item>LightSeaGreen</item>
        <item>LightSkyBlue</item>
        <item>LightSlateGray</item>
        <item>LightSlateGrey</item>
        <item>LightSteelBlue</item>
        <item>LightYellow</item>
        <item>Lime</item>
        <item>LimeGreen</item>
        <item>Linen</item>
        <item>Magenta</item>
        <item>Maroon</item>
        <item>MediumAquaMarine</item>
        <item>MediumBlue</item>
        <item>MediumOrchid</item>
        <item>MediumPurple</item>
        <item>MediumSeaGreen</item>
        <item>MediumSlateBlue</item>
        <item>MediumSpringGreen</item>
        <item>MediumTurquoise</item>
        <item>MediumVioletRed</item>
        <item>MidnightBlue</item>
        <item>MintCream</item>
        <item>MistyRose</item>
        <item>Moccasin</item>
        <item>NavajoWhite</item>
        <item>Navy</item>
        <item>OldLace</item>
        <item>Olive</item>
        <item>OliveDrab</item>
        <item>Orange</item>
        <item>OrangeRed</item>
        <item>Orchid</item>
        <item>PaleGoldenRod</item>
        <item>PaleGreen</item>
        <item>PaleTurquoise</item>
        <item>PaleVioletRed</item>
        <item>PapayaWhip</item>
        <item>PeachPuff</item>
        <item>Peru</item>
        <item>Pink</item>
        <item>Plum</item>
        <item>PowderBlue</item>
        <item>Purple</item>
        <item>Red</item>
        <item>RosyBrown</item>
        <item>RoyalBlue</item>
        <item>SaddleBrown</item>
        <item>Salmon</item>
        <item>SandyBrown</item>
        <item>SeaGreen</item>
        <item>SeaShell</item>
        <item>Sienna</item>
        <item>Silver</item>
        <item>SkyBlue</item>
        <item>SlateBlue</item>
        <item>SlateGray</item>
        <item>SlateGrey</item>
        <item>Snow</item>
        <item>SpringGreen</item>
        <item>SteelBlue</item>
        <item>Tan</item>
        <item>Teal</item>
        <item>Thistle</item>
        <item>Tomato</item>
        <item>Turquoise</item>
        <item>Violet</item>
        <item>Wheat</item>
        <item>White</item>
        <item>WhiteSmoke</item>
        <item>Yellow</item>
        <item>YellowGreen</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_color_list">Colors</string>
    <string name="title_color_detail">Color Detail</string>
    <string name="title_activity_main_menu">Main_menu</string>
    <string name="color_list">Color List</string>
    <string name="launcher_icon_press_to_use_the_color_tool">Launcher icon, press to use the color tool</string>
    <string name="welcome_msg">Welcome to Colorfull ! Please tap the image to get to the palette tool, or tap one of the other buttons to get to the rest of the app.</string>
    <string name="gtScheme">Scheme Master</string>
    <string name="color_hex_ex_ed1703">Color Hex (Ex: ED1703)</string>
</resources>
