<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Main_menu"
    tools:showIn="@layout/activity_main_menu">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/LauncherButton"
            android:layout_width="349dp"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:background="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/launcher_icon_press_to_use_the_color_tool"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:layout_editor_absoluteX="0dp" />

        <Space
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/gotolistbutton"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:text="@string/color_list"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="48dp" />

        <Space
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>